# rsearch

./: Readme
docker-compose/: docker-compose.yaml
server/: Cargo.toml
server/deploy/dockerfiles/: dockerfile  entrypoint.sh
server/scripts/: loaddata.py
server/src/: main.rs
server/src/apis/: search.rs
server/src/common/: response.rs
ui/: package.json
ui/deploy/dockerfiles/: dockerfile
ui/deploy/nginx/: nginx.conf
ui/public/: index.html
ui/src/: App.js
