[package]
name = "rsearch-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
mongodb = { version="2.3.1" }
futures = "0.3.25"
tantivy = "0.19.0"